--- a/src/partials/our-team.html
+++ b/src/partials/our-team.html
@@ -1,7 +1,7 @@
 <section>
     <div class="line"></div>
     <div class="slider-title">Заголовок</div>
-    <div class="slider-container">
+    <div class="slider-contain">
         <div class="slider">
             <div class="slide">
                 <img class="active" src="" alt="Слайд 1">
@@ -24,9 +24,9 @@
                 <p class="slide-text small-text"> 4</p>
             </div>
         </div>
-        <div class="controls">
-            <img class="control-image" src="Vector 231.png" alt="" id="prevButton">
-            <img class="control-image" src="Vector 230.png" alt="" id="nextButton">
+        <div class="control">
+            <img class="control-image" src="/src/img/Vector 230.png" alt="" id="prevButton">
+            <img class="control-image" src="/src/img/Vector 231.png" alt="" id="nextButton">
         </div>
     </div>
     <script src="our-team.js"></script>
